{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 540,
  "lineage": "50dc0fdb-3bcc-46e2-75ab-afe37133cf79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ethereum_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ea52825b3f93d5e5",
            "arn": "arn:aws:ec2:us-east-1:288234451032:elastic-ip/eipalloc-0ea52825b3f93d5e5",
            "association_id": "eipassoc-09e3c727178109897",
            "domain": "vpc",
            "id": "eipalloc-0ea52825b3f93d5e5",
            "instance": "i-0d3d077e92982cb08",
            "network_border_group": "us-east-1",
            "network_interface": "eni-051b71cc37613d5a9",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-34-206-203-189.compute-1.amazonaws.com",
            "public_ip": "34.206.203.189",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ethereum_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:288234451032:instance/i-0d3d077e92982cb08",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:288234451032:key/b931fcf5-60e9-421b-ad55-701be09a2709",
                "tags": {
                  "Environment": "staking",
                  "Name": "geth-data-volume",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "staking",
                  "Name": "geth-data-volume",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0d8662c1b403d36ca",
                "volume_size": 2000,
                "volume_type": "gp3"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:288234451032:key/b931fcf5-60e9-421b-ad55-701be09a2709",
                "tags": {
                  "Environment": "staking",
                  "Name": "prysm-beacon-data-volume",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "staking",
                  "Name": "prysm-beacon-data-volume",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0bb664f40af28e263",
                "volume_size": 1000,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance-profile",
            "id": "i-0d3d077e92982cb08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-051b71cc37613d5a9"
              }
            ],
            "primary_network_interface_id": "eni-051b71cc37613d5a9",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "public_dns": "ec2-34-206-203-189.compute-1.amazonaws.com",
            "public_ip": "34.206.203.189",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "staking",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "staking",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0bbd381627f4debf1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2b9e1747bb25773",
            "tags": {
              "Name": "ethereum-node"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "ethereum-node",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-040baf2d6a78e03f2"
            ]
          },
          "dependencies": [
            "aws_ebs_volume.geth_data_volume",
            "aws_ebs_volume.prysm_beacon_data_volume",
            "aws_eip.ethereum_node",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_route53_zone.internal_zone",
            "aws_security_group.ethereum_node",
            "data.aws_iam_policy_document.instance_assume_role",
            "data.cloudinit_config.ethereum_node",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ethereum_validator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:288234451032:instance/i-067a14bfba5512ef4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdg",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:288234451032:key/b931fcf5-60e9-421b-ad55-701be09a2709",
                "tags": {
                  "Environment": "staking",
                  "Name": "prysm-validator-data-volume",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "staking",
                  "Name": "prysm-validator-data-volume",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0379b706257f3707e",
                "volume_size": 500,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance-profile",
            "id": "i-067a14bfba5512ef4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ab781755a216c462"
              }
            ],
            "primary_network_interface_id": "eni-0ab781755a216c462",
            "private_dns": "ip-10-0-128-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.168",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "staking",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "staking",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-038fe9ff9e0d14a58",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06aaaf4d945c4f0cc",
            "tags": {
              "Name": "ethereum-validator"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "ethereum-validator",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-079492142163db66d"
            ]
          },
          "dependencies": [
            "aws_ebs_volume.prysm_validator_data_volume",
            "aws_iam_instance_profile.instance_profile",
            "aws_iam_role.instance_role",
            "aws_route53_zone.internal_zone",
            "aws_security_group.ethereum_validator",
            "data.aws_iam_policy_document.instance_assume_role",
            "data.cloudinit_config.ethereum_validator",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ethereum_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group/sg-040baf2d6a78e03f2",
            "description": "ethereum_node traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040baf2d6a78e03f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 12000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 12000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 13000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 13000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30303,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 30303
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079492142163db66d"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "ethereum_node",
            "name_prefix": "",
            "owner_id": "288234451032",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ethereum_node"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "ethereum_node",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ethereum_validator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group/sg-079492142163db66d",
            "description": "ethereum_validator traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079492142163db66d",
            "ingress": [],
            "name": "ethereum_validator",
            "name_prefix": "",
            "owner_id": "288234451032",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ethereum_validator"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "ethereum_validator",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ethereum_node_egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-0a51bb574c379cd51",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a51bb574c379cd51",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040baf2d6a78e03f2",
            "security_group_rule_id": "sgr-0a51bb574c379cd51",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ethereum_validator_egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-04f16e206252b84ac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04f16e206252b84ac",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-079492142163db66d",
            "security_group_rule_id": "sgr-04f16e206252b84ac",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_validator",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ethereum_node_tcp_30303",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-09a33a8aa3696f6e5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30303,
            "id": "sgr-09a33a8aa3696f6e5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040baf2d6a78e03f2",
            "security_group_rule_id": "sgr-09a33a8aa3696f6e5",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": 30303
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ethereum_node_tcp_4k",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-04024ba43c3e2028d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4000,
            "id": "sgr-04024ba43c3e2028d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-079492142163db66d",
            "region": "us-east-1",
            "security_group_id": "sg-040baf2d6a78e03f2",
            "security_group_rule_id": "sgr-04024ba43c3e2028d",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": 4000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_node",
            "aws_security_group.ethereum_validator",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ethereum_node_udp_12k",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-0ad57126539bfcdbd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 12000,
            "id": "sgr-0ad57126539bfcdbd",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040baf2d6a78e03f2",
            "security_group_rule_id": "sgr-0ad57126539bfcdbd",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": 12000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ethereum_node_udp_13k",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-0bbcffceee6b162f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 13000,
            "id": "sgr-0bbcffceee6b162f2",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040baf2d6a78e03f2",
            "security_group_rule_id": "sgr-0bbcffceee6b162f2",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": 13000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ethereum_node_udp_30303",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group-rule/sgr-03a3a4c65523ace74",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 30303,
            "id": "sgr-03a3a4c65523ace74",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-040baf2d6a78e03f2",
            "security_group_rule_id": "sgr-03a3a4c65523ace74",
            "tags": null,
            "tags_all": {
              "Environment": "staking",
              "Terraform": "true"
            },
            "to_port": 30303
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ethereum_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:network-acl/acl-039e7fae56f0365e7",
            "default_network_acl_id": "acl-039e7fae56f0365e7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039e7fae56f0365e7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "288234451032",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-06aaaf4d945c4f0cc",
              "subnet-0e2b9e1747bb25773"
            ],
            "tags": {
              "Name": "blockchain-staking-default"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:route-table/rtb-04cfb00aac4e6085b",
            "default_route_table_id": "rtb-04cfb00aac4e6085b",
            "id": "rtb-04cfb00aac4e6085b",
            "owner_id": "288234451032",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "blockchain-staking-default"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:security-group/sg-0eb638656410a7d24",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0eb638656410a7d24",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "288234451032",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blockchain-staking-default"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020a63a07ecee35b5",
            "arn": "arn:aws:ec2:us-east-1:288234451032:elastic-ip/eipalloc-020a63a07ecee35b5",
            "association_id": "eipassoc-060563b3e27f5eee3",
            "domain": "vpc",
            "id": "eipalloc-020a63a07ecee35b5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f0c0e9f57167754b",
            "private_dns": "ip-10-0-1-220.ec2.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-3-213-217-32.compute-1.amazonaws.com",
            "public_ip": "3.213.217.32",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "blockchain-staking-us-east-1a"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:internet-gateway/igw-0088d3b770de80684",
            "id": "igw-0088d3b770de80684",
            "owner_id": "288234451032",
            "region": "us-east-1",
            "tags": {
              "Name": "blockchain-staking"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-020a63a07ecee35b5",
            "association_id": "eipassoc-060563b3e27f5eee3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0aa0bfe924b97cb2f",
            "network_interface_id": "eni-0f0c0e9f57167754b",
            "private_ip": "10.0.1.220",
            "public_ip": "3.213.217.32",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2b9e1747bb25773",
            "tags": {
              "Name": "blockchain-staking-us-east-1a"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a88aab45fe92f7f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aa0bfe924b97cb2f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a88aab45fe92f7f2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0088d3b770de80684",
            "id": "r-rtb-075d9fa97b6c8c3601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-075d9fa97b6c8c360",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:route-table/rtb-0a88aab45fe92f7f2",
            "id": "rtb-0a88aab45fe92f7f2",
            "owner_id": "288234451032",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa0bfe924b97cb2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blockchain-staking-private"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:route-table/rtb-075d9fa97b6c8c360",
            "id": "rtb-075d9fa97b6c8c360",
            "owner_id": "288234451032",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0088d3b770de80684",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blockchain-staking-public"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-097f874bd11050173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc5a7064e619143a",
            "region": "us-east-1",
            "route_table_id": "rtb-0a88aab45fe92f7f2",
            "subnet_id": "subnet-06aaaf4d945c4f0cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adef15150d9923d8",
            "region": "us-east-1",
            "route_table_id": "rtb-075d9fa97b6c8c360",
            "subnet_id": "subnet-0e2b9e1747bb25773"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:subnet/subnet-06aaaf4d945c4f0cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aaaf4d945c4f0cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288234451032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "blockchain-staking-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:subnet/subnet-0e2b9e1747bb25773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2b9e1747bb25773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288234451032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "blockchain-staking-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-097f874bd11050173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:288234451032:vpc/vpc-097f874bd11050173",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039e7fae56f0365e7",
            "default_route_table_id": "rtb-04cfb00aac4e6085b",
            "default_security_group_id": "sg-0eb638656410a7d24",
            "dhcp_options_id": "dopt-db593ca1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097f874bd11050173",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04cfb00aac4e6085b",
            "owner_id": "288234451032",
            "region": "us-east-1",
            "tags": {
              "Name": "blockchain-staking"
            },
            "tags_all": {
              "Environment": "staking",
              "Name": "blockchain-staking",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}